# mopidy-advanced-scrobbler

./: .gitignore  MANIFEST.in  README.rst  TODO.txt  dev.sh  pyproject.toml  setup.cfg  tasks.py  tox.ini
.github/workflows/: ci.yml  release.yml
frontend/: .eslintrc.js  .gitignore  .prettierrc  README.md  package.json  tsconfig.json  vue.config.js
frontend/public/: index.html
frontend/public/css/: wave-ui.v2.13.0.css
frontend/scripts/: generate-icons.ts  generate-svg.ts  generate-svgs.sh
frontend/scripts/code/: svg-sanitation.ts  utils.ts
frontend/src/: App.vue  AppRoot.vue  api.ts  cookie.ts  http.ts  main.ts  mopidy.ts  primevue.ts  router.ts  shims-vue-runtime-core.d.ts  shims-vue.d.ts  shims-waveui.d.ts  types.ts  utils.ts  waveui.ts
frontend/src/api/: mas-api.ts  mopidy-api.ts
frontend/src/components/: AppToolbar.vue  CorrectedLabel.vue  EditCorrectionForm.vue  EditPlayForm.vue  HelloWorld.vue  NowPlayingPanel.vue  UnixTimestamp.vue
frontend/src/icons/: AutoUploadIcon.vue  DeleteIcon.vue  EditIcon.vue  MusicIcon.vue  PauseIcon.vue  PlayIcon.vue  RefreshIcon.vue  ScrobbleAllIcon.vue  ScrobbleIcon.vue  SkipBackwardIcon.vue  SkipForwardIcon.vue  StepBackwardIcon.vue  StepForwardIcon.vue  StopIcon.vue  ThemeAutoIcon.vue  ThemeDarkIcon.vue  ThemeLightIcon.vue  TickIcon.vue
frontend/src/scss/: _basic.scss  _layout.scss  _utils.scss  _waveui.scss  app.scss
frontend/src/views/: Corrections.vue  CorrectionsNaive.vue  Plays.vue  PlaysNaive.vue
mopidy_advanced_scrobbler/: __init__.py  _config.py  _service.py  commands.py  db.py  ext.conf  frontend.py  models.py  network.py  schema.py  serial.py  web.py
mopidy_advanced_scrobbler/_commands/: __init__.py  output.py
mopidy_advanced_scrobbler/_commands/db/: __init__.py  sync_corrections.py
mopidy_advanced_scrobbler/sql/: schema.sql
mopidy_advanced_scrobbler/static/: index.html
scripts/: build-static.sh
tests/: _utils.py  test_extension.py  test_frontend.py
