[build-system]
requires = ["setuptools >= 30.3.0", "wheel"]


[tool.black]
target-version = ["py38"]
line-length = 100


[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100
known_tests = "tests"
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,TESTS,LOCALFOLDER"
lines_after_imports = 2
lines_between_sections = 1
