[metadata]
name = Mopidy-Advanced-Scrobbler
version = 1.0.0
url = https://github.com/djmattyg007/Mopidy-Advanced-Scrobbler
author = Matthew Gamble
author_email = git@matthewgamble.net
license = Apache License, Version 2.0
license_file = LICENSE
description = Mopidy extension for comprehensive management of Last.fm scrobbles
long_description = file: README.rst
classifiers =
    Environment :: No Input/Output (Daemon)
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Multimedia :: Sound/Audio :: Players

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >= 3.8
install_requires =
    Mopidy >= 3.1.1
    Pykka >= 2.0.2
    setuptools
    pylast >= 4.0.0

[options.entry_points]
mopidy.ext =
    better_scrobbler = mopidy_better_scrobbler:Extension

[check-manifest]
ignore =
    screenshots
    screenshots/*
