[metadata]
name = Mopidy-Advanced-Scrobbler
version = 1.0.0
url = https://github.com/djmattyg007/mopidy-advanced-scrobbler
author = Matthew Gamble
author_email = git@matthewgamble.net
license = Apache License, Version 2.0
license_file = LICENSE
description = Mopidy extension for comprehensive management of Last.fm scrobbles
long_description = file: README.rst
classifiers =
    Environment :: No Input/Output (Daemon)
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Multimedia :: Sound/Audio :: Players


[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >= 3.8
install_requires =
    Mopidy >= 3.1.1
    Pykka >= 2.0.1
    setuptools
    pylast >= 4.2.0
    music-metadata-filter >= 2.0.1
    dataclasses-json >= 0.5.2, < 0.6.0
    marshmallow >= 3.11.1, < 4.0.0
    marshmallow-enum >= 1.5.1, < 2.0.0


[options.extras_require]
lint =
    black
    check-manifest
    flake8
    flake8-black
    flake8-bugbear
    flake8-isort
    isort
    mypy
    pep8-naming
test =
    pytest
    pytest-cov
dev =
    %(lint)s
    %(test)s
    tox

[options.packages.find]
exclude =
    tests
    tests.*

[options.entry_points]
mopidy.ext =
    advanced_scrobbler = mopidy_advanced_scrobbler:Extension

[flake8]
application-import-names = mopidy_advanced_scrobbler, tests
max-line-length = 100
exclude = .git, .tox, build
select =
    # Regular flake8 rules
    C, E, F, W
    # flake8-bugbear rules
    B
    # flake8-isort
    I
    # pep8-naming rules
    N
ignore =
    # E203: whitespace before ':' (replaced by Black)
    E203
    # E501: line too long (replaced by Black)
    E501


[check-manifest]
ignore =
    dev.sh
    frontend
    frontend/**/*
    mopidy_advanced_scrobbler/static/**/*


[mypy]
warn_unused_configs = True
